# MemeticATSP

./: README.md  crossover.py  main.py  pyproject.toml  solver.py  tune_params.py
scripts/: main.py  plot.py  search_benchmark.py  tune_params.py
tsp/: crossover.py  genetic.py  greedy.py  mutation.py  reporter.py  representation.py  search.py  solver.py  subtours.py
