[project]
name = "tsp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "numba",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
    "ray[tune]",
    "tqdm",
    "rich",
    "jupytext",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tsp"]